--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,12 @@
 {
-  "cleanUrls": true,
-  "trailingSlash": false,
-  "rewrites": [
-    { "source": "/admin", "destination": "/admin/index.html" },
-    { "source": "/admin/login", "destination": "/admin/login.html" }
+  "routes": [
+    {
+      "src": "/admin/login",
+      "dest": "/admin/login.html"
+    },
+    {
+      "src": "/admin",
+      "dest": "/admin/index.html"
+    }
   ]
 }
