Security: Suppression des fichiers sensibles du repo - Ajout de .gitignore pour env-config.js et api/config - Ajout de fichiers d'exemple (.env.example, env-config.example.js) - Ajout de CONFIGURATION.md avec instructions

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ node_modules/
 # Fichiers de configuration locale avec vraies clés
 env-local.js
 config-local.js
+env-config.js
+api/config
 
 # Documentation technique et fichiers de sécurité (ne pas publier)
 *SECURITY*.md
